--- a/i18n/src/org/netbeans/modules/i18n/wizard/ResourceWizardPanel.form
+++ b/i18n/src/org/netbeans/modules/i18n/wizard/ResourceWizardPanel.form
@@ -16,6 +16,10 @@
           <Connection code="getPanelDescription()" type="code"/>
         </Property>
         <Property name="wrapStyleWord" type="boolean" value="true"/>
+        <Property name="disabledTextColor" type="java.awt.Color" editor="org.netbeans.modules.form.RADConnectionPropertyEditor">
+          <Connection code="new JLabel().getForeground()" type="code"/>
+        </Property>
+        <Property name="enabled" type="boolean" value="false"/>
         <Property name="opaque" type="boolean" value="false"/>
       </Properties>
       <Constraints>
