--- a/testtools/src/org/netbeans/modules/testtools/wizards/TestSuiteTargetPanel.form
+++ b/testtools/src/org/netbeans/modules/testtools/wizards/TestSuiteTargetPanel.form
@@ -17,7 +17,9 @@
   <SubComponents>
     <Component class="javax.swing.JLabel" name="nameLabel">
       <Properties>
-        <Property name="displayedMnemonic" type="int" value="110"/>
+        <Property name="displayedMnemonic" type="int" editor="org.netbeans.modules.form.RADConnectionPropertyEditor">
+          <Connection code="NbBundle.getMessage(TestSuiteTargetPanel.class, &quot;MNM_TestSuiteName&quot;).charAt(0) " type="code"/>
+        </Property>
         <Property name="labelFor" type="java.awt.Component" editor="org.netbeans.modules.form.RADConnectionPropertyEditor">
           <Connection component="nameField" type="bean"/>
         </Property>
@@ -51,7 +53,9 @@
     </Component>
     <Component class="javax.swing.JLabel" name="packageLabel">
       <Properties>
-        <Property name="displayedMnemonic" type="int" value="112"/>
+        <Property name="displayedMnemonic" type="int" editor="org.netbeans.modules.form.RADConnectionPropertyEditor">
+          <Connection code="NbBundle.getMessage(TestSuiteTargetPanel.class, &quot;MNM_TestSuitePackage&quot;).charAt(0) " type="code"/>
+        </Property>
         <Property name="labelFor" type="java.awt.Component" editor="org.netbeans.modules.form.RADConnectionPropertyEditor">
           <Connection component="packageField" type="bean"/>
         </Property>
@@ -85,7 +89,9 @@
     </Component>
     <Component class="javax.swing.JLabel" name="templateLabel">
       <Properties>
-        <Property name="displayedMnemonic" type="int" value="84"/>
+        <Property name="displayedMnemonic" type="int" editor="org.netbeans.modules.form.RADConnectionPropertyEditor">
+          <Connection code="NbBundle.getMessage(TestSuiteTargetPanel.class, &quot;MNM_TestSuiteTemplate&quot;).charAt(0) " type="code"/>
+        </Property>
         <Property name="labelFor" type="java.awt.Component" editor="org.netbeans.modules.form.RADConnectionPropertyEditor">
           <Connection component="templateCombo" type="bean"/>
         </Property>
@@ -119,7 +125,9 @@
     </Component>
     <Component class="javax.swing.JLabel" name="descriptionLabel">
       <Properties>
-        <Property name="displayedMnemonic" type="int" value="68"/>
+        <Property name="displayedMnemonic" type="int" editor="org.netbeans.modules.form.RADConnectionPropertyEditor">
+          <Connection code="NbBundle.getMessage(TestSuiteTargetPanel.class, &quot;MNM_TestSuiteDescription&quot;).charAt(0) " type="code"/>
+        </Property>
         <Property name="labelFor" type="java.awt.Component" editor="org.netbeans.modules.form.RADConnectionPropertyEditor">
           <Connection component="htmlBrowser" type="bean"/>
         </Property>
