--- a/testtools/src/org/netbeans/modules/testtools/wizards/TestWorkspaceSettingsPanel.form
+++ b/testtools/src/org/netbeans/modules/testtools/wizards/TestWorkspaceSettingsPanel.form
@@ -7,7 +7,7 @@
 
   <Layout class="org.netbeans.modules.form.compat2.layouts.DesignCardLayout"/>
   <SubComponents>
-    <Container class="javax.swing.JPanel" name="panel">
+    <Container class="javax.swing.JPanel" name="panel2">
       <Constraints>
         <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignCardLayout" value="org.netbeans.modules.form.compat2.layouts.DesignCardLayout$CardConstraintsDescription">
           <CardConstraints cardName="ok"/>
@@ -18,7 +18,9 @@
       <SubComponents>
         <Component class="javax.swing.JLabel" name="levelLabel">
           <Properties>
-            <Property name="displayedMnemonic" type="int" value="87"/>
+            <Property name="displayedMnemonic" type="int" editor="org.netbeans.modules.form.RADConnectionPropertyEditor">
+              <Connection code="NbBundle.getMessage(TestWorkspaceSettingsPanel.class, &quot;MNM_TestWorkspaceLevel&quot;).charAt(0) " type="code"/>
+            </Property>
             <Property name="labelFor" type="java.awt.Component" editor="org.netbeans.modules.form.RADConnectionPropertyEditor">
               <Connection component="levelCombo" type="bean"/>
             </Property>
@@ -60,7 +62,9 @@
         </Component>
         <Component class="javax.swing.JLabel" name="typeLabel">
           <Properties>
-            <Property name="displayedMnemonic" type="int" value="84"/>
+            <Property name="displayedMnemonic" type="int" editor="org.netbeans.modules.form.RADConnectionPropertyEditor">
+              <Connection code="NbBundle.getMessage(TestWorkspaceSettingsPanel.class, &quot;MNM_TestWorkspaceDefaultType&quot;).charAt(0) " type="code"/>
+            </Property>
             <Property name="labelFor" type="java.awt.Component" editor="org.netbeans.modules.form.RADConnectionPropertyEditor">
               <Connection component="typeField" type="bean"/>
             </Property>
@@ -96,7 +100,9 @@
         </Component>
         <Component class="javax.swing.JLabel" name="attrLabel">
           <Properties>
-            <Property name="displayedMnemonic" type="int" value="65"/>
+            <Property name="displayedMnemonic" type="int" editor="org.netbeans.modules.form.RADConnectionPropertyEditor">
+              <Connection code="NbBundle.getMessage(TestWorkspaceSettingsPanel.class, &quot;MNM_TestWorkspaceDefaultAttrs&quot;).charAt(0) " type="code"/>
+            </Property>
             <Property name="labelFor" type="java.awt.Component" editor="org.netbeans.modules.form.RADConnectionPropertyEditor">
               <Connection component="attrField" type="bean"/>
             </Property>
@@ -139,6 +145,9 @@
         </Component>
         <Component class="javax.swing.JCheckBox" name="advancedCheck">
           <Properties>
+            <Property name="mnemonic" type="int" editor="org.netbeans.modules.form.RADConnectionPropertyEditor">
+              <Connection code="NbBundle.getMessage(TestWorkspaceSettingsPanel.class, &quot;MNM_TestWorkspaceAdvanced&quot;).charAt(0) " type="code"/>
+            </Property>
             <Property name="text" type="java.lang.String" editor="org.netbeans.modules.i18n.form.FormI18nStringEditor">
               <ResourceString bundle="org/netbeans/modules/testtools/wizards/Bundle.properties" key="LBL_AdvancedSettings" replaceFormat="org.openide.util.NbBundle.getMessage({sourceFileName}.class, &quot;{key}&quot;)"/>
             </Property>
@@ -157,7 +166,9 @@
         </Component>
         <Component class="javax.swing.JLabel" name="netbeansLabel">
           <Properties>
-            <Property name="displayedMnemonic" type="int" value="78"/>
+            <Property name="displayedMnemonic" type="int" editor="org.netbeans.modules.form.RADConnectionPropertyEditor">
+              <Connection code="NbBundle.getMessage(TestWorkspaceSettingsPanel.class, &quot;MNM_TestWorkspaceNetbeansHome&quot;).charAt(0) " type="code"/>
+            </Property>
             <Property name="labelFor" type="java.awt.Component" editor="org.netbeans.modules.form.RADConnectionPropertyEditor">
               <Connection component="netbeansField" type="bean"/>
             </Property>
@@ -193,7 +204,9 @@
         </Component>
         <Component class="javax.swing.JLabel" name="xtestLabel">
           <Properties>
-            <Property name="displayedMnemonic" type="int" value="88"/>
+            <Property name="displayedMnemonic" type="int" editor="org.netbeans.modules.form.RADConnectionPropertyEditor">
+              <Connection code="NbBundle.getMessage(TestWorkspaceSettingsPanel.class, &quot;MNM_TestWorkspaceXTestHome&quot;).charAt(0) " type="code"/>
+            </Property>
             <Property name="labelFor" type="java.awt.Component" editor="org.netbeans.modules.form.RADConnectionPropertyEditor">
               <Connection component="xtestField" type="bean"/>
             </Property>
